# photobundle-thesis

./: CMakeLists-11.txt  CMakeLists.txt  README.md
aaa/: CMakeCache.txt  Makefile  cmake_install.cmake
aaa/src/: Makefile
apps/: 1-compile_runkitti (copy).sh  CMakeLists.txt  aa.cc  aaaa.txt  compile_evaluation.sh  compile_point.sh  compile_runkitti.sh  compile_test_kitti_stereo.sh  compile_test_pose.sh  compile_visualize.sh  error.txt  eval  eval.cc  eval.sh  evaluate  evaluation.cc  notes.txt  origin_poses_local.txt  points  points.cc  refined_poses.txt  refined_poses_2000.txt  refined_poses_cache.txt  refined_poses_cache_1200f.txt  refined_poses_cache_500f.txt  refined_poses_local.txt  refined_poses_new_00_0.1_r1.txt  refined_poses_neww.txt  refined_poses_test_ new.txt  run_kitti.cc  test  test.cc  test_kitti_stereo  visualize  visualize.cc  xyz-1200.txt  xyz-500.txt  xyz-gt-01.txt  xyz-init-00.txt  xyz-new-00-0.1-r1.txt  (+7 more)
apps/eval_result/: eval_t_r_error_init.txt  eval_t_r_error_init_00.txt  eval_t_r_error_init_01.txt  eval_t_r_error_init_03.txt  eval_t_r_error_init_04.txt  eval_t_r_error_init_05.txt  eval_t_r_error_init_06.txt  eval_t_r_error_init_07.txt  eval_t_r_error_init_08.txt  eval_t_r_error_init_09.txt  eval_t_r_error_init_10.txt  eval_t_r_error_new_00_01_r1.txt  eval_t_r_error_new_00_02_r1.txt  eval_t_r_error_new_00_02_r2.txt  eval_t_r_error_new_00_03_r1.txt  eval_t_r_error_new_00_03_r2.txt  eval_t_r_error_new_00_04_r1.txt  eval_t_r_error_new_00_04_r2.txt  eval_t_r_error_new_01_01_r1.txt  eval_t_r_error_new_01_03_r2.txt  eval_t_r_error_new_03_03_r2.txt  eval_t_r_error_new_04_01_r1.txt  eval_t_r_error_new_04_01_r2.txt  eval_t_r_error_new_04_02_r1.txt  eval_t_r_error_new_04_02_r2.txt  eval_t_r_error_new_04_03_r1.txt  eval_t_r_error_new_04_03_r2.txt  eval_t_r_error_new_05_03_r2.txt  eval_t_r_error_new_06_01_r1.txt  eval_t_r_error_new_06_03_r2.txt  eval_t_r_error_new_07_03_r2.txt  eval_t_r_error_new_08_03_r2.txt  eval_t_r_error_new_09_03_r2.txt  eval_t_r_error_new_10_03_r2.txt  eval_t_r_error_origin.txt  eval_t_r_error_origin_00_r1.txt  eval_t_r_error_origin_01_r1.txt  eval_t_r_error_origin_03_r1.txt  eval_t_r_error_origin_04_r1.txt  eval_t_r_error_origin_05_r1.txt  (+5 more)
apps/poses/: refined_poses_new.txt  refined_poses_new_00_01_r2.txt  refined_poses_new_00_02_r1.txt  refined_poses_new_00_02_r2.txt  refined_poses_new_00_03_r1.txt  refined_poses_new_00_04_r1.txt  refined_poses_new_00_04_r2.txt  refined_poses_new_01_03_r2.txt  refined_poses_new_02_03_r2.txt  refined_poses_new_03_03_r2.txt  refined_poses_new_04_01_r1.txt  refined_poses_new_04_01_r2.txt  refined_poses_new_04_02_r1.txt  refined_poses_new_04_02_r2.txt  refined_poses_new_04_03_r1.txt  refined_poses_new_04_03_r2.txt  refined_poses_new_05_03_r2.txt  refined_poses_new_06_01_r1.txt  refined_poses_new_06_03_r2.txt  refined_poses_new_07_03_r2.txt  refined_poses_new_08_03_r2.txt  refined_poses_new_09_03_r2.txt  (+13 more)
bbb/: compile_runkitti.sh  compile_test_kitti_stereo.sh  test_kitti_stereo
cmake/: FindEigen.cmake
config/: kitti_stereo.cfg
src/: dataset.cc  dataset_PBA.cc  jet_extras.h  photobundle.cc  photobundle.h  pose_utils.cc  pose_utils.h  sample_eigen.h
(+119 files in other folders)
